--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Baby Gork - $BabyGork</title>
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap" rel="stylesheet" />
+
+  <!-- Clean readable font -->
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
 
   <style>
     body {
       margin: 0;
-      font-family: 'Fredoka', sans-serif;
+      font-family: 'DM Sans', sans-serif;
       background-color: #000;
       color: #fff;
       text-align: center;
@@ -150,6 +152,34 @@
       margin-bottom: 15px;
     }
 
+    .gallery {
+      margin-top: 50px;
+      padding: 20px;
+      background: #111;
+      border-radius: 15px;
+      box-shadow: 4px 4px 0px #222;
+    }
+
+    .gallery h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    .gallery-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+    }
+
+    .gallery-grid img {
+      width: 100%;
+      border-radius: 15px;
+      border: 4px solid #ffeb3b;
+      background: #000;
+      box-shadow: 5px 5px 0px #444;
+      object-fit: cover;
+    }
+
     footer {
       margin-top: 50px;
       font-size: 1rem;
@@ -221,20 +251,37 @@
   </div>
 </header>
 
+<!-- OPTIONAL: Meme image section -->
 <section class="meme-gallery">
-  <!-- Add meme images here if needed -->
+  <!-- Add meme-style images here later if needed -->
 </section>
 
+<!-- Roadmap -->
 <section class="roadmap">
   <h2>🍼 $BabyGork Roadmap</h2>
   <ul>
-    <li><strong>Q2 2025:</strong> Birth of Baby Gork 👶</li>
-    <li><strong>Q2 2025:</strong> Launch $BabyGork and airdrop baby bottles 🍼</li>
-    <li><strong>Q3 2025:</strong> Auto-yield: Get $Gork just by holding 💰</li>
-    <li><strong>Q4 2025:</strong> BabyDAO vote: Crib upgrades or snack fund 🗳️</li>
-    <li><strong>Q1 2026:</strong> Animated Baby Gork NFTs 👾</li>
-    <li><strong>Q2 2026:</strong> GorkVerse Metaverse Nursery 👼🌌</li>
+    <li><strong>Q2 2025:</strong> Gork gets frisky — Baby Gork is born 👶🤖</li>
+    <li><strong>Q2 2025:</strong> Auto-yield launch: Baby cries = $Gork drops 🍼💸</li>
+    <li><strong>Q3 2025:</strong> Partnership with Elon’s daycare (pending) 🐣</li>
+    <li><strong>Q3 2025:</strong> Community vote: pacifier emoji or laser eyes 😵🍼</li>
+    <li><strong>Q4 2025:</strong> First words detected on-chain: “Goo goo... GPT?” 🧠</li>
+    <li><strong>Q1 2026:</strong> Baby Gork AI generates memes to earn $Milk 🍪</li>
+    <li><strong>Q2 2026:</strong> Launch GorkSchool: AI Baby Training Simulator 🎓</li>
+    <li><strong>2027+:</strong> Baby Gork replaces Grok and raises Elon 😳</li>
   </ul>
+</section>
+
+<!-- OG Gallery -->
+<section class="gallery">
+  <h2>🖼️ OG BabyGork Gallery</h2>
+  <div class="gallery-grid">
+    <img src="photo_2025-05-04_13-52-12.jpg" alt="OG BabyGork 1" />
+    <img src="photo_2025-05-04_13-52-12.jpg" alt="OG BabyGork 2" />
+    <img src="photo_2025-05-04_13-52-12.jpg" alt="OG BabyGork 3" />
+    <img src="photo_2025-05-04_13-52-12.jpg" alt="OG BabyGork 4" />
+    <img src="photo_2025-05-04_13-52-12.jpg" alt="OG BabyGork 5" />
+    <img src="photo_2025-05-04_13-52-12.jpg" alt="OG BabyGork 6" />
+  </div>
 </section>
 
 <footer>
