--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       padding: 60px 20px 20px 20px;
       border-radius: 15px;
       margin-top: 20px;
-      background-image: url('babygork-dex-banner.png');
+      background-image: url('gork3.jpg');
       background-size: cover;
       background-position: center;
       color: white;
